<resources>
    <string name="app_name">DrawerMenu</string>
    <string name="header_label">Hello!</string>
    <string name="menu_item_camera">Camera</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_tools">Tools</string>
    <string name="menu_item_about">About me</string>
    <string name="menu_item_send">Send callback</string>
    <string name="menu_label">Contacts</string>
    <string name="button_send">Send</string>
    <string name="menu_item_bottom">WithBottomNav</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>

</resources>
